small iphone wrapping fix v1

--- a/assets/css/smc-custom-bootstrap-b.css
+++ b/assets/css/smc-custom-bootstrap-b.css
@@ -14,13 +14,19 @@
   color: #D988A8;
 }
 
-/* shrink brand to fit on portrait phones */
+/* shrink brand to fit on larger portrait phones */
 @media (max-width: 450px) {
 .navbar-default .navbar-brand {
   font-size: 1.7em;
 }
 }
 
+/* shrink brand to fit on smaller portrait phones */
+@media (max-width: 320px) {
+.navbar-default .navbar-brand {
+  font-size: 1.5em;
+}
+}
 
 /*navbar main link style*/
 .navbar-default .navbar-nav>li>a {
